--- a/assignment-1/templates/index.html
+++ b/assignment-1/templates/index.html
@@ -15,6 +15,7 @@
                 <th>Name</th>
                 <th>Year</th>
                 <th>Awards</th>
+                <th>Edit</th>
             </thead>
             {% for movie in movies %}
             <tr>
@@ -22,6 +23,9 @@
                 <td>{{movie.name}}</td>
                 <td>{{movie.year}}</td>
                 <td>{{movie.awards}}</td>
+                <td>
+                    <a href="{{ url_for('add_movie', id=movie.id)}}">Edit</a>
+                </td>
             </tr>
             {% endfor %}
         </table>
