A2: Add movie CRUD operations

--- a/assignment-2/app/templates/index.html
+++ b/assignment-2/app/templates/index.html
@@ -13,6 +13,7 @@
             <p>Welcome, {{ current_user.username }}!</p>
             <a href="/logout">Log out</a>
         </section>
+        <a href="{{ url_for('movies') }}">Movie database</a>
     {% else %}
         <section>
             <p>
