A2: Refactor to use layout template

--- a/assignment-2/app/templates/add_movie.html
+++ b/assignment-2/app/templates/add_movie.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Movie</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
     {% if not movie %}
     <h1>Add a New Movie</h1>
     {% else %}
@@ -44,5 +38,4 @@
     {% endif %}
 
     <a href="{{ url_for('movies') }}">Back to Movies List</a>
-</body>
-</html>
+{% endblock %}
