--- a/assignment-2/app/templates/index.html
+++ b/assignment-2/app/templates/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
     <h1>Movie Database Home</h1>
 
     {% if current_user.is_authenticated %}
@@ -25,6 +19,4 @@
             </p>
         </section>
     {% endif %}
-
-</body>
-</html>
+{% endblock %}
