--- a/assignment-2/app/templates/error.html
+++ b/assignment-2/app/templates/error.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
     <h1>Oops!</h1>
     <p>
         We are sorry, something bad happened.
         {{ exception.description }}
     </p>
-
-</body>
-</html>
+{% endblock %}
