--- a/assignment-2/app/templates/register.html
+++ b/assignment-2/app/templates/register.html
@@ -1,35 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registration</title>
-  </head>
-  <body>
-    <h1>Registration</h1>
+{% extends "layout.html" %}
+{% block content %}
+  <h1>Registration</h1>
 
-    <form action="" method="post">
-      {{ form.hidden_tag() }}
-      <label>
-        {{ form.username.label }}
-        {{ form.username(size=32) }}
-        {{ " ".join(form.username.errors) }}
-      </label>
-      <br />
-      <label>
-        {{ form.password.label }}
-        {{ form.password(size=32) }}
-        {{ " ".join(form.password.errors) }}
-      </label>
-      <br />
-      <label>
-        {{ form.password2.label }}
-        {{ form.password2(size=32) }}
-        {{ " ".join(form.password2.errors) }}
-      </label>
-      <br />
-      <label>{{ form.submit() }}</label>
-    </form>
-
-  </body>
-</html>
+  <form action="" method="post">
+    {{ form.hidden_tag() }}
+    <label>
+      {{ form.username.label }}
+      {{ form.username(size=32) }}
+      {{ " ".join(form.username.errors) }}
+    </label>
+    <br />
+    <label>
+      {{ form.password.label }}
+      {{ form.password(size=32) }}
+      {{ " ".join(form.password.errors) }}
+    </label>
+    <br />
+    <label>
+      {{ form.password2.label }}
+      {{ form.password2(size=32) }}
+      {{ " ".join(form.password2.errors) }}
+    </label>
+    <br />
+    <label>{{ form.submit() }}</label>
+  </form>
+{% endblock %}
