A3: Add genre field to movies

--- a/assignment-3/app/templates/add_movie.html
+++ b/assignment-3/app/templates/add_movie.html
@@ -27,6 +27,12 @@
         </label>
         <br/>
 
+        <label>
+            Genre
+            <input value="{{ movie.genre }}" name="genre" type="text" />
+        </label>
+        <br/>        
+
         <button type="submit">Submit</button>
         <!-- edit or create button -->
     </form>
